@@ -1,3 +1,9 @@
+2007-02-08  Richard Dale  <rdale@foton.es>
+
+	* Fixed bugs in the debug dump of QMetaObjects created at runtime
+	* Normalized some code layout
+	* Only QApplication and QCoreApplication destructors are now called
+
 2007-02-07  Richard Dale  <rdale@foton.es>
 
 	* Added a Debug.DebugChannel() method to get debug setting in C#
